ok socket structure set up

--- a/ian-master.html
+++ b/ian-master.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>ian-master</h1>
+        <button id="i-button-one">get rekt</button>
+        <button id="i-button-two">fuck u all</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="ian-master.js"></script>
     </body>
 </html>
