--- a/ian.html
+++ b/ian.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>ian</h1>
+        <button id="i-button">throw shade</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="ian.js"></script>
     </body>
 </html>
