--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="divide"></div>
         <h4>james</h4>
         <a href="/james"><img src="https://specials-images.forbesimg.com/imageserve/5c3e2cec31358e6b37329e63/416x416.jpg?background=000000&cropX1=543&cropX2=2112&cropY1=131&cropY2=1701" alt="james"></a>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
