--- a/james-master.html
+++ b/james-master.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>james-master</h1>
+        <button id="j-button-one">get rekt</button>
+        <button id="j-button-two">fuck u all</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="james-master.js"></script>
     </body>
 </html>
