--- a/james.html
+++ b/james.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>james</h1>
+        <button id="j-button">throw shade</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="james.js"></script>
     </body>
 </html>
