--- a/grant-master.html
+++ b/grant-master.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>grant-master</h1>
+        <button id="g-button-one">get rekt</button>
+        <button id="g-button-two">fuck u all</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="grant-master.js"></script>
     </body>
 </html>
