--- a/grant.html
+++ b/grant.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>grant</h1>
+        <button id="g-button">throw shade</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="grant.js"></script>
     </body>
 </html>
