--- a/tori-master.html
+++ b/tori-master.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>tori-master</h1>
+        <button id="t-button-one">get rekt</button>
+        <button id="t-button-two">fuck u all</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="tori-master.js"></script>
     </body>
 </html>
