--- a/tori.html
+++ b/tori.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>tori</h1>
+        <button id="t-button">throw shade</button>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="tori.js"></script>
     </body>
 </html>
