--- a/james.html
+++ b/james.html
@@ -8,6 +8,11 @@
     <body>
         <h1>james</h1>
         <button id="j-button">throw shade</button>
+        <div id="uVizionAd">
+            <div>
+                <img id="capita" src="./assets/avatarSelecta/shitUvision.png" alt="uVizion">
+            </div>
+        </div>
         <script src="/socket.io/socket.io.js"></script>
         <script src="james.js"></script>
     </body>
