--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/james"><img src="https://specials-images.forbesimg.com/imageserve/5c3e2cec31358e6b37329e63/416x416.jpg?background=000000&cropX1=543&cropX2=2112&cropY1=131&cropY2=1701" alt="james"></a>
         <div id="uVizionAd">
             <div>
-                <img src="./assets/avatarSelecta/shitUvision.png" alt="uVizion">
+                <img id="capita" src="./assets/avatarSelecta/shitUvision.png" alt="uVizion">
             </div>
         </div>
         <script src="/socket.io/socket.io.js"></script>
