--- a/index.html
+++ b/index.html
@@ -6,20 +6,16 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>NOT TO MY TASTE</h1>
-        <h3>please select your aavaataar</h3>
-        <div class="divide"></div>
-        <h4>grant</h4>
-        <a href="/grant"><img src="https://a57.foxnews.com/static.foxnews.com/foxnews.com/content/uploads/2019/07/931/524/Grant-Thompson-Facebook.jpg?ve=1&tl=1" alt="grant"></a>
-        <div class="divide"></div>
-        <h4>tori</h4>
-        <a href="/tori"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxUN_OQYw5ttdMpB8KmV18sXTnvnHty3aCtUPE_6MOPBpjUL1D4w" alt="tori"></a>
-        <div class="divide"></div>
-        <h4>ian</h4>
-        <a href="/ian"><img src="https://www.lboro.ac.uk/media/media/schoolanddepartments/mathematics-education-centre/staff-area/staff-profile-photos/ian-jones-lg.jpg" alt="ian"></a>
-        <div class="divide"></div>
-        <h4>james</h4>
-        <a href="/james"><img src="https://specials-images.forbesimg.com/imageserve/5c3e2cec31358e6b37329e63/416x416.jpg?background=000000&cropX1=543&cropX2=2112&cropY1=131&cropY2=1701" alt="james"></a>
+        <canvas></canvas>
+        <div id="avatarHeads">
+            <img src="./assets/avatarSelecta/jAvatar.png" alt="james" class="avatarHead selectedHead">
+            <img src="./assets/avatarSelecta/gAvatar.png" alt="grant" class="avatarHead">
+            <img src="./assets/avatarSelecta/tAvatar.png" alt="tori" class="avatarHead">
+            <img src="./assets/avatarSelecta/iAvatar.png" alt="ian" class="avatarHead">
+        </div>
+        <div id="avatarNameWrap">
+            <h1 id="avatarName">james</h1>
+        </div>
         <div id="uVizionAd">
             <div>
                 <img id="capita" src="./assets/avatarSelecta/shitUvision.png" alt="uVizion">
