models are now sliding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <canvas></canvas>
         <div id="avatarHeads">
             <img src="./assets/avatarSelecta/jAvatar.png" alt="james" class="avatarHead selectedHead">
             <img src="./assets/avatarSelecta/gAvatar.png" alt="grant" class="avatarHead">
@@ -21,6 +20,8 @@
                 <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
             </div>
         </div>
+        <script src="three.min.js"></script>
+        <script src="objloader.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="script.js"></script>
     </body>
