--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="info">
+            <p id="initializing">initializing...</p>
+            <p id="avatarName">< james ></p>
+        </div>
+        <div id="terminal"></div>
         <div id="avatarHeads">
-            <img src="./assets/avatarSelecta/jAvatar.png" alt="james" class="avatarHead selectedHead">
+            <p class="avatarHead selectedHead">james</p>
+            <p class="avatarHead">grant</p>
+            <p class="avatarHead">tori</p>
+            <p class="avatarHead">ian</p>
+            <!-- <img src="./assets/avatarSelecta/jAvatar.png" alt="james" class="avatarHead selectedHead">
             <img src="./assets/avatarSelecta/gAvatar.png" alt="grant" class="avatarHead">
             <img src="./assets/avatarSelecta/tAvatar.png" alt="tori" class="avatarHead">
-            <img src="./assets/avatarSelecta/iAvatar.png" alt="ian" class="avatarHead">
-        </div>
-        <div id="avatarNameWrap">
-            <h1 id="avatarName">james</h1>
+            <img src="./assets/avatarSelecta/iAvatar.png" alt="ian" class="avatarHead"> -->
         </div>
         <div id="uVizionAd">
             <div>
