--- a/james.html
+++ b/james.html
@@ -6,8 +6,16 @@
         <link rel="stylesheet" href="james.css">
     </head>
     <body>
-        <h1>james</h1>
-        <button id="j-button">throw shade</button>
+        <div id="info">
+            <p id="name">james stream</p>
+        </div>
+        <!-- <button id="j-button">throw shade</button> -->
+        <div id="buttonWrap">
+            <p class="interaction">throw<br>shade</p>
+            <p class="interaction">message</p>
+            <p class="interaction">fight</p>
+            <p class="interaction">exit</p>
+        </div>
         <div id="uVizionAd">
             <div>
                 <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
