--- a/leaderboard.html
+++ b/leaderboard.html
@@ -55,8 +55,10 @@
             </div>
         </div>
 
-        <img id="prawn" src="media/prawn_boy.png">
-        <img id="nugget" src="media/nugget_lord.png">
+        <img class="dead" src="media/prawn_boy.png">
+        <img class="nugget" src="media/nugget_lord.png">
+        <img class="prawn" src="media/prawn_boy.png">
+        <img class="worm" src="media/nugget_lord.png">
 
         <video src="media/prawn_boy.mp4" loop></video>
 
