--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,60 +7,80 @@
     </head>
     <body>
 
-        <h1 id="leader"></h1>
+        <h1 class="leader">leader</h1>
 
         <div id="graph">
             <div class="bar-wrap">
-                <div class="bar"><img src="media/wotsit.png"></div>
+                <div class="bar"><img src="media/dead_boy.png"></div>
             </div>
             <div class="bar-wrap">
                 <div class="bar"><img src="media/wotsit.png"></div>
             </div>
             <div class="bar-wrap">
-                <div class="bar"><img src="media/wotsit.png"></div>
+                <div class="bar"><img src="media/prawn.png"></div>
             </div>
             <div class="bar-wrap">
-                <div class="bar"><img src="media/wotsit.png"></div>
+                <div class="bar"><img src="media/worm.png"></div>
             </div>
         </div>
 
         <div id="data">
             <div id="dead-boy">
-                <p>Dead Boy the Kid</p>
-                <!-- <p>hits: <span class="hits"></span></p> -->
-                <p>viewers: <span class="viewers"></span></p>
-                <p>score: <span class="score"></span></p>
-                <h2 class="position"></h2>
+                <!-- <p>Dead Boy the Kid</p> -->
+                <div class="statWrap">
+                    <h2 class="position">0</h2>
+                    <div>
+                        <img src="media/eye.png"><span class="viewers"></span>
+                    </div>
+                    <div>
+                        <img src="media/cash.png"><span class="score"></span>
+                    </div>
+                </div>
             </div>
             <div id="nugget-lord">
-                <p>Nugget Lord</p>
-                <!-- <p>hits: <span class="hits"></span></p> -->
-                <p>viewers: <span class="viewers"></span></p>
-                <p>score: <span class="score"></span></p>
-                <h2 class="position"></h2>
+                <img id="nl-sig" src="media/sigs/nuggetlordsig.png">
+                <div class="statWrap">
+                    <h2 class="position">0</h2>
+                    <div>
+                        <img src="media/eye.png"><span class="viewers"></span>
+                    </div>
+                    <div>
+                        <img src="media/cash.png"><span class="score"></span>
+                    </div>
+                </div>
             </div>
             <div id="prawn-boy">
-                <p>Prawn Boy</p>
-                <!-- <p>hits: <span class="hits"></span></p> -->
-                <p>viewers: <span class="viewers"></span></p>
-                <p>score: <span class="score"></span></p>
-                <h2 class="position"></h2>
+                <img id="pb-sig" src="media/sigs/prawnboysig.png">
+                <div class="statWrap">
+                    <h2 class="position">0</h2>
+                    <div>
+                        <img src="media/eye.png"><span class="viewers"></span>
+                    </div>
+                    <div>
+                        <img src="media/cash.png"><span class="score"></span>
+                    </div>
+                </div>
             </div>
             <div id="worm-person">
-                <p>Worm Person</p>
-                <!-- <p>hits: <span class="hits"></span></p> -->
-                <p>viewers: <span class="viewers"></span></p>
-                <p>score: <span class="score"></span></p>
-                <h2 class="position"></h2>
+                <!-- <p>Worm Person</p> -->
+                <div class="statWrap">
+                    <h2 class="position">0</h2>
+                    <div>
+                        <img src="media/eye.png"><span class="viewers"></span>
+                    </div>
+                    <div>
+                        <img src="media/cash.png"><span class="score"></span>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <img class="dead" src="media/prawn_boy.png">
-        <img class="nugget" src="media/nugget_lord.png">
-        <img class="prawn" src="media/prawn_boy.png">
-        <img class="worm" src="media/nugget_lord.png">
+        <img class="charImg dead" src="media/dead_boy.png">
+        <img class="charImg nugget" src="media/nugget_lord.png">
+        <img class="charImg prawn" src="media/prawn_boy.png">
+        <img class="charImg worm" src="media/worm_person.png">
 
-        <video src="media/prawn_boy.mp4" loop></video>
+        <!-- <video src="media/prawn_boy.mp4" loop></video> -->
 
         <div id="uVizionAd">
             <div>
