--- a/pb-m.html
+++ b/pb-m.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>prawn-boy-master</title>
-        <link rel="stylesheet" href="pb-m.css">
+        <link rel="stylesheet" href="/pb/pb-m.css">
     </head>
     <body>
-        <h1>grant-master</h1>
-        <button id="g-button-one">get rekt</button>
+        <button id="saveprawns">help prawns</button>
         <button id="g-button-two">fuck u all</button>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="pb-m.js"></script>
+        <script src="pb/pb-m.js"></script>
     </body>
 </html>
