--- a/wormperson.html
+++ b/wormperson.html
@@ -9,14 +9,24 @@
     <body>
         <img id="lips" src="wp/assets/lips.png">
         <img id="lipsx" src="wp/assets/lipsX.png">
-        <img id="candle" src="wp/assets/candle.png">
+        <img id="candle" src="wp/assets/cgif.gif">
+        <h1 id="blow">blow out candle</h1>
         <div id="prizeWrap">
             <div id="claimYourPrize">
-                <video id="wormVid" playsinline="true" muted="true" src="wp/assets/worm.mp4"></video>
+                <video id="wormVid" playsinline="true" muted="true" src="wp/assets/goodWormx.mp4"></video>
                 <button id="claimButton">click for prize</button>
             </div>
         </div>
-        <audio loop="true" id="candleNoise" src="wp/assets/candleNoise.m4a"></audio>
+        <div id="prizeWrapFake">
+            <div id="claimYourPrizeFake">
+                <img src="wp/assets/badCandle.gif">
+                <video id="kidVid" playsinline="true" muted="true" src="wp/assets/worm.mp4"></video>
+                <button id="claimButtonFake">click for prize</button>
+            </div>
+        </div>
+
+        <audio loop="true" id="goodCandle" src="wp/assets/goodCandle.m4a"></audio>
+        <audio loop="true" id="badCandle" src="wp/assets/badCandle.m4a"></audio>
 
         <div id="uVizionAd">
             <div>
