--- a/instructions.html
+++ b/instructions.html
@@ -17,6 +17,8 @@
             <h2>192.168.4.1:8080</h2>
         </div>
 
+        <!-- <img src="/assets/wtf/1.jpg" alt=""> -->
+
         <canvas id="canvas"></canvas>
 
         <div id="uVizionAd">
