--- a/nuggetlord.html
+++ b/nuggetlord.html
@@ -28,6 +28,10 @@
             </div>
         </div>
 
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <audio src="nl/audio/bff.mp3" preload="metadata"></audio>
         <audio src="nl/audio/hot.mp3" preload="metadata"></audio>
         <audio src="nl/audio/heave.mp3" preload="metadata"></audio>
