--- a/prawnboy.html
+++ b/prawnboy.html
@@ -18,6 +18,10 @@
             </div>
         </div>
 
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <audio src="pb/assets/e1.m4a"></audio>
         <audio src="pb/assets/e2.m4a"></audio>
         <audio src="pb/assets/e3.m4a"></audio>
