--- a/wormperson.html
+++ b/wormperson.html
@@ -33,6 +33,11 @@
                 <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
             </div>
         </div>
+
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <script src="scripts/three.min.js"></script>
         <script src="scripts/robit.js"></script>
         <script src="scripts/mtlloader.js"></script>
