--- a/wp-m.html
+++ b/wp-m.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>worm-person-master</title>
-        <link rel="stylesheet" href="wp-m.css">
+        <link rel="stylesheet" href="/wp/wp-m.css">
     </head>
     <body>
-        <h1>tori-master</h1>
-        <button id="t-button-one">get rekt</button>
         <button id="t-button-two">fuck u all</button>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="wp-m.js"></script>
+        <script src="/wp/wp-m.js"></script>
     </body>
 </html>
