--- a/nuggetlord.html
+++ b/nuggetlord.html
@@ -24,7 +24,7 @@
 
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
         </div>
 
