--- a/dbtk-m.html
+++ b/dbtk-m.html
@@ -10,7 +10,8 @@
         <button id="j-button-two">go away</button>
         <button id="j-button-three">get out</button>
         <button id="j-button-four">please leave</button>
-        <!-- <button id="j-button-three">go away</button> -->
+        <button id="j-button-five">nuke</button>
+        
         <script src="/socket.io/socket.io.js"></script>
         <script src="/dbtk/dbtk-m.js"></script>
     </body>
