--- a/deadboythekid.html
+++ b/deadboythekid.html
@@ -33,8 +33,12 @@
 
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
+        </div>
+
+        <div id="nuke">
+            <img id="nukeImg">
         </div>
 
         <audio src="/dbtk/assets/leave.m4a"></audio>
