--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
         </div>
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
         </div>
+
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <script src="scripts/three.min.js"></script>
         <script src="scripts/objloader.js"></script>
         <script src="/socket.io/socket.io.js"></script>
