--- a/instructions.html
+++ b/instructions.html
@@ -27,6 +27,10 @@
             </div>
         </div>
 
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <script src="/scripts/three.min.js"></script>
         <script src="/scripts/mtlloader.js"></script>
         <script src="/scripts/objloader.js"></script>
