--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>leaderboard</title>
-        <link rel="stylesheet" href="leaderboard.css">
+        <link rel="stylesheet" href="/leaderboard.css">
     </head>
     <body>
 
@@ -11,16 +11,16 @@
 
         <div id="graph">
             <div class="bar-wrap">
-                <div class="bar"><img src="media/dead_boy.png"></div>
+                <div class="bar"><img src="/media/dead_boy.png"></div>
             </div>
             <div class="bar-wrap">
-                <div class="bar"><img src="media/wotsit.png"></div>
+                <div class="bar"><img src="/media/wotsit.png"></div>
             </div>
             <div class="bar-wrap">
-                <div class="bar"><img src="media/prawn.png"></div>
+                <div class="bar"><img src="/media/prawn.png"></div>
             </div>
             <div class="bar-wrap">
-                <div class="bar"><img src="media/worm.png"></div>
+                <div class="bar"><img src="/media/worm.png"></div>
             </div>
         </div>
 
@@ -30,34 +30,34 @@
                 <div class="statWrap">
                     <h2 class="position">0</h2>
                     <div>
-                        <img src="media/eye.png"><span class="viewers"></span>
+                        <img src="/media/eye.png"><span class="viewers"></span>
                     </div>
                     <div>
-                        <img src="media/cash.png"><span class="score"></span>
+                        <img src="/media/cash.png"><span class="score"></span>
                     </div>
                 </div>
             </div>
             <div id="nugget-lord">
-                <img id="nl-sig" src="media/sigs/nuggetlordsig.png">
+                <img id="nl-sig" src="/media/sigs/nuggetlordsig.png">
                 <div class="statWrap">
                     <h2 class="position">0</h2>
                     <div>
-                        <img src="media/eye.png"><span class="viewers"></span>
+                        <img src="/media/eye.png"><span class="viewers"></span>
                     </div>
                     <div>
-                        <img src="media/cash.png"><span class="score"></span>
+                        <img src="/media/cash.png"><span class="score"></span>
                     </div>
                 </div>
             </div>
             <div id="prawn-boy">
-                <img id="pb-sig" src="media/sigs/prawnboysig.png">
+                <img id="pb-sig" src="/media/sigs/prawnboysig.png">
                 <div class="statWrap">
                     <h2 class="position">0</h2>
                     <div>
-                        <img src="media/eye.png"><span class="viewers"></span>
+                        <img src="/media/eye.png"><span class="viewers"></span>
                     </div>
                     <div>
-                        <img src="media/cash.png"><span class="score"></span>
+                        <img src="/media/cash.png"><span class="score"></span>
                     </div>
                 </div>
             </div>
@@ -66,29 +66,33 @@
                 <div class="statWrap">
                     <h2 class="position">0</h2>
                     <div>
-                        <img src="media/eye.png"><span class="viewers"></span>
+                        <img src="/media/eye.png"><span class="viewers"></span>
                     </div>
                     <div>
-                        <img src="media/cash.png"><span class="score"></span>
+                        <img src="/media/cash.png"><span class="score"></span>
                     </div>
                 </div>
             </div>
         </div>
 
-        <img class="charImg dead" src="media/dead_boy.png">
-        <img class="charImg nugget" src="media/nugget_lord.png">
-        <img class="charImg prawn" src="media/prawn_boy.png">
-        <img class="charImg worm" src="media/worm_person.png">
+        <img class="charImg dead" src="/media/dead_boy.png">
+        <img class="charImg nugget" src="/media/nugget_lord.png">
+        <img class="charImg prawn" src="/media/prawn_boy.png">
+        <img class="charImg worm" src="/media/worm_person.png">
 
         <!-- <video src="media/prawn_boy.mp4" loop></video> -->
 
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
         </div>
 
+        <div id="nuke">
+            <img id="nukeImg">
+        </div>
+
         <script src="/socket.io/socket.io.js"></script>
-        <script src="leaderboard.js"></script>
+        <script src="/leaderboard.js"></script>
     </body>
 </html>
