--- a/wormperson.html
+++ b/wormperson.html
@@ -30,7 +30,7 @@
 
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
         </div>
 
