--- a/prawnboy.html
+++ b/prawnboy.html
@@ -14,7 +14,7 @@
 
         <div id="uVizionAd">
             <div>
-                <img id="capita" src="./assets/avatarSelecta/uviz.png" alt="uVizion">
+                <img id="capita">
             </div>
         </div>
 
