--- a/deadboythekid.html
+++ b/deadboythekid.html
@@ -41,7 +41,7 @@
             <img id="nukeImg">
         </div>
 
-        <audio src="/dbtk/assets/leave.m4a"></audio>
+        <audio src="/dbtk/assets/leave.m4a" loop="true"></audio>
 
         <script src="scripts/three.min.js"></script>
         <script src="scripts/mtlloader.js"></script>
