--- a/wormperson.html
+++ b/wormperson.html
@@ -38,6 +38,8 @@
             <img id="nukeImg">
         </div>
 
+        <img id="progress" src="wp/assets/wormProgress.png">
+
         <script src="scripts/three.min.js"></script>
         <script src="scripts/robit.js"></script>
         <script src="scripts/mtlloader.js"></script>
